# bencher

./: .gitignore  Cargo.toml  LICENSE.md  README.md
src/: bidimensional.rs  bin.rs  config.rs  db.rs  error.rs  experiment_view.rs  handles.rs  lib.rs  linear.rs  model.rs  parsed.rs  stat.rs  value_model.rs
tests/: test.rs
