[package]
name = "bencher"
version = "0.5.0"
authors = ["bsdinis <baltasar.dinis@tecnico.ulisboa.pt>"]
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
cli-table = "0.4"
rusqlite = { version = "0.28", features = ["vtab"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
either = "1.8"
eyre = "0.6.8"
color-eyre = "0.6.2"
regex = "1.7.1"
logos = "0.12.1"
evalexpr = "8.1.0"

[lib]
name = "bencher"
path = "src/lib.rs"

[[bin]]
name = "bencher"
path = "src/bin.rs"
