[package]
name = "bencher"
version = "0.6.0"
authors = ["bsdinis <baltasar.dinis@tecnico.ulisboa.pt>"]
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
cli-table = "0.4"
rusqlite = { version = "0.31", features = ["vtab"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
either = "1.10"
eyre = "0.6.12"
color-eyre = "0.6.2"
regex = "1.10.3"
logos = "0.14.0"
evalexpr = "11.3"

[lib]
name = "bencher"
path = "src/lib.rs"

[[bin]]
name = "bencher"
path = "src/bin.rs"
